Revision history for Class::Simple::Readonly::Cached

0.08
	Warn if $object is a scalar in new()

0.07	Fri Jan  8 18:52:37 EST 2021
	Improved handling of return values including undef

0.06	Thu Dec 17 14:38:12 EST 2020
	Was falsely claiming retrieval of an array after a scalar retrieval
		is a cache hit

0.05	Thu 17 Oct 09:36:27 EDT 2019
	Improved caching of functions that return 0
	Better testing that caching actually caches everywhere
	Added stats() call

0.04	Fri 11 Oct 19:38:38 EDT 2019
	Object shouldn't be instantiated if cache argument is not given
	Improved handling of scalar then array call on same method

0.03	Sun Sep 29 05:12:19 PDT 2019
	Added the object() method

0.02	Fri Sep 27 03:43:56 PDT 2019
	Added hash mode

0.01	Sun 22 Sep 10:01:14 EDT 2019
        First Version