@@ -2,6 +2,7 @@ Revision history for Class::Simple::Readonly::Cached
 
 0.08
 	Warn if $object is a scalar in new()
+	Warn if you're trying to cache an object that's already being cached
 
 0.07	Fri Jan  8 18:52:37 EST 2021
 	Improved handling of return values including undef
